# ParallaxAI

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: deploy.yml  pr.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: celery_app.py  config.py  database.py  main.py
backend/app/agents/: base.py  orchestrator.py  synthesizer.py  validator.py
backend/app/agents/research/: __init__.py  academic.py  competitor.py  financial.py  market.py  news.py  regulatory.py  sentiment.py
backend/app/api/: websocket.py
backend/app/api/routes/: auth.py  reports.py  research.py  webhooks.py
backend/app/core/: auth.py  exceptions.py
backend/app/models/: __init__.py  report.py  research.py  subscription.py  usage.py  user.py  workspace.py
backend/app/schemas/: __init__.py  report.py  research.py  user.py  websocket.py
backend/app/services/: billing.py  search.py  usage.py
backend/app/tasks/: research.py
backend/tests/: conftest.py  test_research_api.py  test_search.py
docs/: 01-product-vision.md  02-user-personas.md  03-prd.md  04-user-flow.md  05-monetization.md  06-system-architecture.md  07-tech-stack.md  08-database-schema.md  09-api-design.md  10-agent-design.md  11-infrastructure.md  12-competitive-analysis.md  13-launch-plan.md
frontend/: next.config.ts  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  supabase.ts  websocket.ts
frontend/src/stores/: research.ts
frontend/src/types/: index.ts
(+13 files in other folders)
