[project]
name = "parallax-api"
version = "0.1.0"
description = "Parallax — Multi-Agent Research Network API"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.0",

    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "flower>=2.0.0",

    # AI / LLM
    "anthropic>=0.40.0",

    # Search
    "tavily-python>=0.5.0",
    "exa-py>=1.7.0",

    # Auth
    "supabase>=2.10.0",
    "python-jose[cryptography]>=3.3.0",

    # Payments
    "stripe>=11.0.0",

    # Email
    "resend>=2.5.0",

    # Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Observability
    "langfuse>=2.57.0",
    "logfire>=2.10.0",

    # Utils
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "factory-boy>=3.3.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
